syntax = "proto3";

option go_package = "/hello";

package hello;

// The greeting service definition
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply) {}

  // Sends another greeting
  rpc SayHelloAgain (HelloRequest) returns (HelloReply) {}

  // Sum a and b
  rpc Add (AddRequest) returns (AddReply) {}
}

// The request message containing the user's name
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings
message HelloReply {
  string message = 1;
}

// The request message containing the user's a and b f64
message AddRequest {
  double a = 1;
  double b = 2;
}

// The response message containing the sum
message AddReply {
  double sum = 1;
}
